🔧 chore: update build configs and CLAUDE.md