@@ -4,21 +4,22 @@ This file provides guidance to Claude Code (claude.ai/code) when working with co
 
 ## Project Overview
 
-Tower Messaging is a Java framework implementing command messaging patterns. It provides a message bus for dispatching commands, with support for CDI and Quarkus integration.
+Tower Messaging is a Java framework implementing command messaging patterns. It provides a type-safe message gateway for dispatching commands to handlers, with support for CDI and Quarkus integration.
+
+The architecture is built around the `CommandHandler<C, R>` interface - handlers implement this interface to declare which command type they process and what result type they return. This provides compile-time type safety compared to annotation-based approaches.
 
 ## Build System
 
 This is a Gradle multi-module project using Kotlin DSL for build scripts.
 
 **Prerequisites:**
-- Java 21+ (configured in `java-conventions.gradle.kts`)
+- Java 25+ (configured in `java-conventions.gradle.kts`)
 - Gradle 9.0+ (via wrapper)
-- `MAVEN_USERNAME` and `MAVEN_PASSWORD` properties must be defined in `~/.gradle/gradle.properties` for publishing (dummy values are fine for local builds)
 
 **Common Commands:**
 
 ```bash
-# Build all modules (use wrapper for Gradle 9.0)
+# Build all modules
 ./gradlew build
 
 # Run all tests
@@ -27,12 +28,23 @@ This is a Gradle multi-module project using Kotlin DSL for build scripts.
 # Run tests for a specific module
 ./gradlew :messaging-core:test
 
+# Run a single test class
+./gradlew :messaging-core:test --tests "io.iamcyw.tower.messaging.handle.CommandTest"
+
+# Run a single test method
+./gradlew :messaging-core:test --tests "io.iamcyw.tower.messaging.handle.CommandTest.shouldExecuteHandlerAndReturnResult"
+
 # Publish to local Maven repository
 ./gradlew publishToMavenLocal
 
 # Clean build outputs
 ./gradlew clean
+
+# Check JReleaser configuration (for releases)
+./gradlew jreleaserConfig
 ```
+
+**Note:** Tests require `--enable-preview` JVM argument for Java 25 preview features. This is configured in `java-conventions.gradle.kts`.
 
 ## Project Structure
 
@@ -40,63 +52,103 @@ The project is organized into the following modules:
 
 ### Core Modules
 
-- **`common`** - Shared utilities (Classes, CommonKit, ListKit)
-- **`messaging-core`** - Core messaging framework with MessageBus, message handlers, and dispatch logic
-- **`messaging-cdi`** - CDI integration for dependency injection support
-
-### Schema Modules
-
-- **`schema:schema-model`** - Model classes for schema definitions (Operation, Field, Argument, InputType, etc.)
-- **`schema:schema-builder`** - Schema builder using Jandex for annotation scanning and model creation
+- **`common`** - Shared utilities (CommonKit, ListKit, Classes, Assert, StringPool, Async utilities)
+- **`messaging-core`** - Core messaging framework with `MessageGateway`, `CommandHandler` interface, `HandlerRegistry`, and interceptor chain
+- **`messaging-cdi`** - CDI integration with producers for `HandlerRegistry` and `MessageGateway`
 
 ### Quarkus Support
 
-- **`support:quarkus:tower-quarkus`** - Quarkus runtime extension
-- **`support:quarkus:tower-quarkus-deployment`** - Quarkus build-time deployment processor
-- **`support:quarkus:integration-tests`** - Quarkus integration tests (currently excluded due to Gradle 9.0 compatibility issue)
-
-### Dependencies
-
-- **`messaging-dependencies`** - BOM (Bill of Materials) platform module for dependency version management
+- **`support:quarkus:tower-quarkus`** - Quarkus runtime extension with `QuarkusHandlerRegistry`
+- **`support:quarkus:tower-quarkus-deployment`** - Quarkus build-time deployment processor using Jandex for handler discovery and bytecode generation
+- **`support:quarkus:integration-tests`** - Quarkus integration tests (currently excluded from build)
 
 ## Architecture
 
-### Message Flow
+### Command Flow
 
-1. Messages are dispatched through `MessageBus.dispatch(Message<R>)`
-2. `DefaultMessageBus.route()` resolves the appropriate `MessageHandle` based on the message identifier
-3. `DefaultInterceptorChain` processes any registered interceptors
-4. `MessageHandle.handle()` invokes the actual method via `OperationInvoker`
+1. **Dispatch** - `MessageGateway.send(Command)` or `sendAsync(Command, Class<R>)` receives the command
+2. **Resolve** - `DefaultMessageGateway` looks up handlers via `HandlerRegistry.getHandlersForCommand(command)`
+3. **Filter** - Registry filters handlers by type compatibility and `canHandle(command)` predicate
+4. **Intercept** - `DefaultInterceptorChain` processes registered `CommandInterceptor`s in order
+5. **Execute** - The handler's `handle(command)` method is invoked
 
-### Key Annotations
+### Core Interfaces
 
-- `@UseCase` - Marks a class as containing message handlers
-- `@CommandHandle` - Marks a method as a command handler
-- `@Predicate` - Marks a method as a predicate for conditional message handling
-- `@Parameter` - Maps method parameters to message payload fields
+**CommandHandler<C extends Command, R>**
+- `R handle(C command)` - Processes the command and returns a result
+- `default boolean canHandle(C command)` - Returns `true` by default; override for conditional routing
 
-### Schema Building
+**HandlerMetadata<C, R>**
+- `Class<C> commandType()` - The command type this handler processes
+- `Class<R> resultType()` - The result type this handler produces
+- `Class<? extends CommandHandler<C, R>> handlerClass()` - The handler implementation class
 
-The `SchemaBuilder` uses Jandex to scan classes annotated with `@UseCase` at build time:
+**HandlerRegistry**
+- `List<CommandHandler<C, R>> getHandlersForCommand(C command)` - Returns handlers that can process the given command
 
-1. `SchemaBuilder.build(IndexView)` creates a schema from the index
-2. `OperationCreator` creates Operation definitions from annotated methods
-3. `InputTypeCreator` creates input type definitions from method parameters
-4. `ReferenceCreator` manages type references and dependencies
+**CommandInterceptor**
+- `int order()` - Lower values execute first (default: 0)
+- `<C extends Command, R> R intercept(C command, CommandInterceptorChain chain)` - Intercept command execution
 
-### Testing
+### Handler Registration Patterns
 
-Unit tests use JUnit 5 and AssertJ. The test infrastructure uses Jandex indexing:
-
+**Plain Java (messaging-core):**
 ```java
-// Example test pattern from messaging-core tests
-IndexView index = Indexer.getTestIndex("io/iamcyw/tower/messaging/test");
-Schema schema = SchemaBuilder.build(index);
-Bootstrap bootstrap = new Bootstrap(schema);
-MessageGateway gateway = bootstrap.getMessageGateway();
+// Create handlers and metadata manually
+List<CommandHandler<?, ?>> handlers = List.of(new CreateOrderHandler());
+List<HandlerMetadata<?, ?>> metadata = List.of(new CreateOrderHandlerMetadata());
+HandlerRegistry registry = new DefaultHandlerRegistry(handlers, metadata);
+MessageGateway gateway = new DefaultMessageGateway(registry, interceptors);
 ```
 
-Quarkus tests use `@QuarkusTest` and inject `MessageGateway`.
+**CDI (messaging-cdi):**
+```java
+@Inject
+MessageGateway gateway;
+
+@Inject
+CommandHandler<MyCommand, MyResult> handler; // Handlers are CDI beans
+```
+
+**Quarkus (tower-quarkus):**
+- Handlers are discovered at build time via Jandex
+- `HandlerMetadata` classes are generated using bytecode generation (`HandlerMetadataGenerator`)
+- `QuarkusHandlerRegistry` collects all handlers via CDI injection
+
+### Type Resolution (Quarkus Extension)
+
+The `HandlerTypeResolver` in the deployment module extracts generic type parameters from `CommandHandler<C, R>` implementations using Jandex. This enables build-time metadata generation without reflection at runtime.
+
+### Batch Execution
+
+The `VirtualThreadBatchExecutor` (using Java 25 preview features) provides batch command execution with virtual threads for I/O-bound operations.
+
+## Testing
+
+Unit tests use JUnit 5 and AssertJ. Tests can be run standalone without CDI:
+
+```java
+// Example test pattern
+SimpleCommandHandler handler = new SimpleCommandHandler();
+HandlerMetadata<SimpleCommand, String> metadata = createMetadata(
+    SimpleCommand.class, String.class, SimpleCommandHandler.class);
+
+HandlerRegistry registry = new DefaultHandlerRegistry(
+    List.of(handler), List.of(metadata));
+
+List<CommandHandler<SimpleCommand, String>> handlers =
+    registry.getHandlersForCommand(new SimpleCommand("test"));
+```
+
+Quarkus tests use `@QuarkusTest` and inject `MessageGateway`:
+
+```java
+@QuarkusTest
+public class BasicTest {
+    @Inject
+    MessageGateway gateway;
+}
+```
 
 ## Conventions
 
@@ -111,17 +163,16 @@ Quarkus tests use `@QuarkusTest` and inject `MessageGateway`.
 
 The `buildSrc` directory contains convention plugins:
 
-- **`java-conventions.gradle.kts`** - Java 21 source/target compatibility, JUnit 5 setup, JBoss Logging annotation processor
-- **`maven-deploy.gradle.kts`** - Maven publishing configuration with sources and Javadoc jars
+- **`tower.java-conventions.gradle.kts`** - Java 25 source/target compatibility, preview features enabled, JUnit 5 setup
+- **`tower.maven-publish.gradle.kts`** - Maven publishing configuration with POM metadata
 
-All Java modules apply these conventions and inherit dependency versions from `messaging-dependencies`.
+### Release Process
 
-### Package Structure
+The project uses JReleaser for publishing to Maven Central. See `RELEASING.md` for details.
 
-```
-io.iamcyw.tower
-├── messaging          # Core messaging APIs and implementations
-├── messaging.cdi      # CDI integration
-├── schema             # Schema model and builder
-└── quarkus            # Quarkus extension
-```
+Required environment variables for publishing:
+- `JRELEASER_MAVENCENTRAL_USERNAME`
+- `JRELEASER_MAVENCENTRAL_PASSWORD`
+- `JRELEASER_GPG_PUBLIC_KEY`
+- `JRELEASER_GPG_SECRET_KEY`
+- `JRELEASER_GPG_PASSPHRASE`
